--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,7 @@
 	format = ssh
 [gpg "ssh"]
 	program = /Applications/1Password.app/Contents/MacOS/op-ssh-sign
+	allowedSignersFile = .ssh/allowed-signers
 [commit]
 	gpgsign = true
 [user]
