--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2337,6 +2337,8 @@ map cmd+enter
 
 # map kitty_mod+n new_os_window
 # map cmd+n       new_os_window
+map kitty_mod+n new_os_window_with_cwd
+map cmd+n       new_os_window_with_cwd
 
 #::  Works like new_window above, except that it opens a top-level OS
 #::  window. In particular you can use new_os_window_with_cwd to open
@@ -2461,6 +2463,8 @@ map cmd+r
 
 # map kitty_mod+t new_tab
 # map cmd+t       new_tab
+map kitty_mod+t new_tab_with_cwd
+map cmd+t       new_tab_with_cwd
 
 #: Close tab
 
