feat: emulate home / end keys

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2200,6 +2200,11 @@ map cmd+c       combine : copy_to_clipboard : clear_selection
 
 #: Scrolling {{{
 
+#: Home / End key emulation
+
+map cmd+left  send_text normal \e[H
+map cmd+right send_text normal \e[F 
+
 #: Scroll line up
 
 # map kitty_mod+up    scroll_line_up
