--- a/.hammerspoon/.vscode/settings.json
+++ b/.hammerspoon/.vscode/settings.json
@@ -1,9 +1,6 @@
 {
   "[lua]": {
-    "editor.defaultFormatter": "sumneko.lua",
-  },
-  "Lua.diagnostics.neededFileStatus": {
-    "codestyle-check": "Any"
+    "editor.defaultFormatter": "JohnnyMorganz.stylua",
   },
   "Lua.workspace.checkThirdParty": false,
   "Lua.workspace.library": [
